--- a/style.css
+++ b/style.css
@@ -20,8 +20,10 @@ header {
 }
 
 .title {
-    font-size: 2rem;
+    font-style: italic;
+    font-size: 3rem;
     font-weight: bold;
+    font-variation-settings: 'wght' 850;
 }
 
 .subtitle {
